# cmn_ai

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: documentation.yml  publish-pypi.yml  testing.yml  workflow.yml
activations/: index.html
callbacks/core/: index.html
callbacks/hook/: index.html
callbacks/schedule/: index.html
callbacks/training/: index.html
cmn_ai/: __init__.py  activations.py  learner.py  losses.py  plot.py
cmn_ai/callbacks/: core.py  hook.py  schedule.py  training.py
cmn_ai/tabular/: data.py  eda.py  preprocessing.py
cmn_ai/text/: __init__.py  data.py
cmn_ai/training/: callbacks.py  learner.py
cmn_ai/utils/: data.py  processors.py  utils.py
cmn_ai/vision/: __init__.py  core.py  data.py  learner.py  plot.py
docs/: activations.md  index.md  learner.md  losses.md  plot.md
docs/callbacks/: core.md  hook.md  schedule.md  training.md
docs/tabular/: data.md  eda.md  preprocessing.md
docs/text/: data.md
docs/utils/: data.md  processors.md  utils.md
docs/vision/: core.md  data.md
learner/: index.html
losses/: index.html
plot/: index.html
search/: search_index.json
tabular/data/: index.html
tabular/eda/: index.html
tabular/preprocessing/: index.html
tests/: test_activations.py  test_learner.py  test_losses.py  test_packaging.py  test_plot.py  test_processors.py
tests/test_callbacks/: __init__.py  test_core.py  test_hook.py  test_schedule.py  test_training.py
tests/test_tabular/: test_data.py  test_eda.py  test_preprocessing.py
tests/test_text/: test_data.py
tests/test_utils/: test_data.py  test_processors.py  test_utils.py
tests/test_vision/: test_core.py  test_data.py
text/data/: index.html
utils/data/: index.html
utils/processors/: index.html
utils/utils/: index.html
vision/core/: index.html
vision/data/: index.html
