[tool.poetry]
name = "cmn-ai"
version = "0.1.0"
description = ""
authors = ["ImadDabbura <imad.dabbura@hotmail.com>"]
readme = "README.md"
packages = [{include = "cmn_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
seaborn = "^0.12.2"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
fastprogress = "^1.0.3"
fastcore = "^1.5.29"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pre-commit = "^3.1.1"
pytest-cov = "^4.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"
mkdocstrings = {extras = ["python-legacy"], version = "^0.20.0"}

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers --disable-pytest-warnings -ra"
xfail_strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
