[project]
name = "cmn-ai"
version = "0.1.0"
description = "A comprehensive machine learning library with utilities for vision, text, and tabular data"
authors = [
    {name = "ImadDabbura", email = "imad.dabbura@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["machine-learning", "deep-learning", "vision", "text", "tabular"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "seaborn>=0.13.0",
    "numpy>=2.2.3,<3.0.0",
    "matplotlib>=3.10.1,<4.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "fastprogress>=1.0.3,<2.0.0",
    "fastcore>=1.7.29,<2.0.0",
    "scipy>=1.15.2,<2.0.0",
    "torchinfo>=1.8.0,<2.0.0",
    "torcheval>=0.0.7,<0.1.0",
    "datasets>=3.3.2,<4.0.0",
    "torch>=2.6.0,<3.0.0",
    "torchvision>=0.21.0,<0.22.0",
    "pyarrow-hotfix>=0.6,<0.7"
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.2.1",
    "pre-commit>=3.1.1",
    "pytest-cov>=4.0.0"
]
docs = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.12",
    "mkdocstrings-python>=1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["cmn_ai"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers --disable-pytest-warnings -ra"
xfail_strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
